--- a/package.json
+++ b/package.json
@@ -23,9 +23,12 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^5.0.0",
+    "axios": "^1.4.0",
+    "cors": "^2.8.5",
     "express": "^4.18.2"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/node": "^20.4.4",
     "@typescript-eslint/eslint-plugin": "^6.1.0",
