예시 코드 추가

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -105,5 +105,6 @@
     /* Completeness */
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
     "skipLibCheck": true /* Skip type checking all .d.ts files. */
-  }
+  },
+  "exclude": ["./fp-ts-example", "./playground", "./prisma"] // 설정 파일 및 예시 파일 제거
 }
