--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "@prisma/client": "^5.0.0",
     "axios": "^1.4.0",
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "fp-ts": "^2.16.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
