--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@prisma/client": "^5.0.0",
     "axios": "^1.4.0",
     "cors": "^2.8.5",
+    "dayjs": "^1.11.9",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
     "fp-ts": "^2.16.0",
     "helmet": "^7.0.0",
