--- a/package.json
+++ b/package.json
@@ -28,16 +28,22 @@
     "dayjs": "^1.11.9",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "fp-ts": "^2.16.0",
     "helmet": "^7.0.0",
     "morgan": "^1.10.0",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
     "winston": "^3.10.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/express-session": "^1.17.7",
     "@types/morgan": "^1.9.4",
     "@types/node": "^20.4.4",
+    "@types/passport": "^1.0.12",
+    "@types/passport-local": "^1.0.35",
     "@typescript-eslint/eslint-plugin": "^6.1.0",
     "@typescript-eslint/parser": "^6.1.0",
     "eslint": "^8.45.0",
