--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "express-validator": "^7.0.1",
     "fp-ts": "^2.16.0",
     "helmet": "^7.0.0",
     "morgan": "^1.10.0",
