--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "express-validator": "^7.0.1",
     "fp-ts": "^2.16.0",
     "helmet": "^7.0.0",
+    "lodash": "^4.17.21",
     "morgan": "^1.10.0",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
@@ -41,6 +42,7 @@
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/express-session": "^1.17.7",
+    "@types/lodash": "^4.14.197",
     "@types/morgan": "^1.9.4",
     "@types/node": "^20.4.4",
     "@types/passport": "^1.0.12",
